--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "jsonwebtoken": "^8.5.1",
         "moment": "^2.29.4",
         "multer": "^1.4.5-lts.1",
+        "node-cron": "^3.0.2",
+        "node-schedule": "^2.1.0",
         "nodemailer": "^6.8.0"
     }
 }
